Corrected hover effect on mobile

--- a/styles.css
+++ b/styles.css
@@ -583,7 +583,7 @@ display: flex;
 	}
 
 	.key-message .emphasis:hover span{
-		letter-spacing: 0px;
+		letter-spacing: 2px;
 	}
 	
 	.emphasize-footer-message p{
